# libspex

./: .gitignore  AUTHORS  COPYING  Dockerfile  Makefile.am  README.md  configure.ac
.github/workflows/: main.yml
doxygen/: Doxyfile  README.md
gamechannel/: Makefile.am  README.md  boardrules.cpp  boardrules.hpp  broadcast.cpp  broadcast.hpp  broadcast_tests.cpp  chaintochannel.cpp  chaintochannel.hpp  chaintochannel_tests.cpp  channelcore.pc.in  channelgame.cpp  channelgame.hpp  channelgame_tests.cpp  channelmanager.cpp  channelmanager.hpp  channelmanager.tpp  channelmanager_tests.cpp  channelmanager_tests.hpp  channelstatejson.cpp  channelstatejson.hpp  channelstatejson_tests.cpp  channelstatejson_tests.hpp  channeltest.py  daemon.cpp  daemon.hpp  database.cpp  database.hpp  database_tests.cpp  ethsignatures.cpp  ethsignatures.hpp  ethsignatures_tests.cpp  gamechannel.pc.in  gamestatejson.cpp  gamestatejson.hpp  gamestatejson_tests.cpp  gsprpc.cpp  gsprpc.hpp  movesender.cpp  movesender.hpp  (+47 more)
gamechannel/proto/: broadcast.proto  metadata.proto  signatures.proto  stateproof.proto  testprotos.proto
mover/: Makefile.am  README.md  logic.cpp  logic.hpp  logic_tests.cpp  main.cpp  moves.cpp  moves.hpp  moves_tests.cpp  pending.cpp  pending.hpp  pending_tests.cpp
mover/gametest/: Makefile.am  basic.py  bind_locally.py  catching_up.py  dupjsonkeys.py  getnullstate.py  lmdb_resize.py  mover.py  pending-disabled.py  pending-onesocket.py  pending-twosockets.py  pending.py  persistence-lmdb.py  persistence-sqlite.py  persistence.py  pruning.py  reorg.py  stopped_xayad.py  waitforchange.py  xrpcwait.py
mover/proto/: mover.proto
nonfungible/: Makefile.am  README.md  assets.cpp  assets.hpp  assets_tests.cpp  logic.cpp  logic.hpp  main.cpp  moveparser.cpp  moveparser.hpp  moveprocessor.cpp  moveprocessor.hpp  moveprocessor_tests.cpp  pending.cpp  pending.hpp  pending_tests.cpp  rpcserver.cpp  rpcserver.hpp  schema.hpp  schema.sql  schema_head.cpp  schema_tail.cpp  schema_tests.cpp  statejson.cpp  statejson.hpp  statejson_tests.cpp  testutils.cpp  testutils.hpp
nonfungible/gametest/: burn.py  minting.py  nftest.py  reorg.py  transfers.py
ships/: Makefile.am  README.md  board.cpp  board.hpp  board_tests.cpp  channel.cpp  channel.hpp  channel_tests.cpp  channelrpc.cpp  channelrpc.hpp  coord.cpp  coord.hpp  coord_tests.cpp  gamestatejson.cpp  gamestatejson.hpp  gamestatejson_tests.cpp  grid.cpp  grid.hpp  grid_tests.cpp  logic.cpp  logic.hpp  logic_tests.cpp  main-channel.cpp  main-gsp.cpp  schema.hpp  schema.sql  schema_head.cpp  schema_tail.cpp  schema_tests.cpp  testutils.cpp  testutils.hpp
ships/channeltest/: disputes.py  force_close.py  full_game.py  pending.py  reorg.py  tx_fail.py  (+2 more)
websocket/: README.md  gsp-websocket-server.py
xayagame/: testutils.hpp
xgame/: Makefile.am  defaultmain.cpp  defaultmain.hpp  game.cpp  game.hpp  game_tests.cpp  gamelogic.cpp  gamelogic.hpp  gamelogic_tests.cpp  gamerpcserver.cpp  gamerpcserver.hpp  heightcache.cpp  heightcache.hpp  heightcache_tests.cpp  libxgame.pc.in  lmdbstorage.cpp  lmdbstorage.hpp  lmdbstorage_tests.cpp  mainloop.cpp  mainloop.hpp  mainloop_tests.cpp  pendingmoves.cpp  pendingmoves.hpp  pendingmoves_tests.cpp  pruningqueue.cpp  pruningqueue.hpp  pruningqueue_tests.cpp  rest.cpp  rest.hpp  rest_tests.cpp  signatures.cpp  signatures.hpp  signatures_tests.cpp  sqlitegame.cpp  sqlitegame.hpp  sqlitegame_tests.cpp  sqlitestorage.cpp  sqlitestorage.hpp  sqlitestorage_tests.cpp  storage.cpp  (+11 more)
xgametest/: Makefile.am  game.py  premine.py  testcase.py  x.py
xutil/: Makefile.am  base64.cpp  base64.hpp  base64_tests.cpp  compression.cpp  compression.hpp  compression_internal.hpp  compression_tests.cpp  cryptorand.cpp  cryptorand.hpp  cryptorand_tests.cpp  hash.cpp  hash.hpp  hash_tests.cpp  jsonutils.cpp  jsonutils.hpp  jsonutils_tests.cpp  libxayautil.pc.in  random.cpp  random.hpp  random.tpp  random_tests.cpp  uint256.cpp  uint256.hpp  uint256_tests.cpp
(+10 files in other folders)
